vendors/knhks/include/knhk/eval.h

// knhk/eval.h
// Query evaluation functions: boolean queries, CONSTRUCT8

#ifndef KNHK_EVAL_H
#define KNHK_EVAL_H

#include "types.h"
#include "simd.h"

// Generate span ID (no timing dependency)
uint64_t knhk_generate_span_id(void);

// Evaluate boolean query (ASK, COUNT>=k, ASK_SPO)
// Inline for hot path performance - directly implements core logic
// Fills receipt with provenance information (timing is caller's responsibility)
static inline int knhk_eval_bool(const knhk_context_t *ctx, const knhk_hook_ir_t *ir, knhk_receipt_t *rcpt)
{
  // cost model ≤2 atoms: (filter by p-run) + (reduce eq S==s)
  if (ir->p != ctx->run.pred) {
    if (rcpt) {
      rcpt->lanes = 0;
      rcpt->span_id = 0;
      rcpt->a_hash = 0;
    }
    return 0;
  }

  int result = 0;
  
#if NROWS == 8
  // Use specialized unrolled versions for NROWS=8
  // Direct if-else chain (optimized by compiler) - most common operations first
  // This avoids switch overhead while maintaining good branch prediction
  if (ir->op == KNHK_OP_ASK_SP)
    result = knhk_eq64_exists_8(ctx->S, ctx->run.off, ir->s);

  else if (ir->op == KNHK_OP_ASK_SPO)
    result = knhk_eq64_spo_exists_8(ctx->S, ctx->O, ctx->run.off, ir->s, ir->o);

  else if (ir->op == KNHK_OP_COUNT_SP_GE)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->S, ctx->run.off, ir->s);
    result = cnt >= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_SP_LE)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->S, ctx->run.off, ir->s);
    result = cnt <= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_SP_EQ)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->S, ctx->run.off, ir->s);
    result = cnt == ir->k;
  }

  else if (ir->op == KNHK_OP_ASK_OP)
    result = knhk_eq64_exists_o_8(ctx->O, ctx->run.off, ir->o);

  else if (ir->op == KNHK_OP_UNIQUE_SP)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->S, ctx->run.off, ir->s);
    result = cnt == 1;
  }

  else if (ir->op == KNHK_OP_COUNT_OP)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->O, ctx->run.off, ir->o);
    result = cnt >= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_OP_LE)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->O, ctx->run.off, ir->o);
    result = cnt <= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_OP_EQ)
  {
    uint64_t cnt = knhk_eq64_count_8(ctx->O, ctx->run.off, ir->o);
    result = cnt == ir->k;
  }

  else if (ir->op == KNHK_OP_COMPARE_O_EQ)
    result = knhk_compare_o_8(ctx->O, ctx->run.off, ir->o, 0);

  else if (ir->op == KNHK_OP_COMPARE_O_GT)
    result = knhk_compare_o_8(ctx->O, ctx->run.off, ir->o, 1);

  else if (ir->op == KNHK_OP_COMPARE_O_LT)
    result = knhk_compare_o_8(ctx->O, ctx->run.off, ir->o, 2);

  else if (ir->op == KNHK_OP_COMPARE_O_GE)
    result = knhk_compare_o_8(ctx->O, ctx->run.off, ir->o, 3);

  else if (ir->op == KNHK_OP_COMPARE_O_LE)
    result = knhk_compare_o_8(ctx->O, ctx->run.off, ir->o, 4);

  else if (ir->op == KNHK_OP_VALIDATE_DATATYPE_SP)
    result = knhk_validate_datatype_sp_8(ctx->S, ctx->O, ctx->run.off, ir->s, ir->o);

  else if (ir->op == KNHK_OP_VALIDATE_DATATYPE_SPO)
  {
    // Check if (s, p, o) exists where o matches datatype_hash
    // ir->o contains the object value, ir->k contains the datatype hash
    // First check if (s, p, o) exists
    int exists = knhk_eq64_spo_exists_8(ctx->S, ctx->O, ctx->run.off, ir->s, ir->o);
    if (!exists) {
      result = 0;
    } else {
      // For SPO datatype validation, we verify the triple exists
      // Full datatype hash validation (comparing ir->k with object's datatype hash)
      // would require additional schema metadata, which is handled at the schema level
      // For hot path, existence check is sufficient as schema validation occurs upstream
      result = exists;
    }
  }
#else
  // General versions for other NROWS (not supported in v1.0, but kept for compatibility)
  if (ir->op == KNHK_OP_ASK_SP)
    result = knhk_eq64_exists_run(ctx->S, ctx->run.off, ctx->run.len, ir->s);

  else if (ir->op == KNHK_OP_ASK_SPO)
    result = knhk_eq64_spo_exists_run(ctx->S, ctx->O, ctx->run.off, ctx->run.len, ir->s, ir->o);

  else if (ir->op == KNHK_OP_COUNT_SP_GE)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->S, ctx->run.off, ctx->run.len, ir->s);
    result = cnt >= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_SP_LE)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->S, ctx->run.off, ctx->run.len, ir->s);
    result = cnt <= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_SP_EQ)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->S, ctx->run.off, ctx->run.len, ir->s);
    result = cnt == ir->k;
  }

  else if (ir->op == KNHK_OP_ASK_OP)
  {
    result = knhk_eq64_exists_run(ctx->O, ctx->run.off, ctx->run.len, ir->o);
  }

  else if (ir->op == KNHK_OP_UNIQUE_SP)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->S, ctx->run.off, ctx->run.len, ir->s);
    result = cnt == 1;
  }

  else if (ir->op == KNHK_OP_COUNT_OP)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->O, ctx->run.off, ctx->run.len, ir->o);
    result = cnt >= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_OP_LE)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->O, ctx->run.off, ctx->run.len, ir->o);
    result = cnt <= ir->k;
  }

  else if (ir->op == KNHK_OP_COUNT_OP_EQ)
  {
    uint64_t cnt = knhk_eq64_count_run(ctx->O, ctx->run.off, ctx->run.len, ir->o);
    result = cnt == ir->k;
  }

  // Comparison operations (general versions)
  else if (ir->op == KNHK_OP_COMPARE_O_EQ)
  {
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->O[ctx->run.off + i] == ir->o) {
        result = 1;
        break;
      }
  }
  
  else if (ir->op == KNHK_OP_COMPARE_O_GT)
  {
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->O[ctx->run.off + i] > ir->o) {
        result = 1;
        break;
      }
  }
  
  else if (ir->op == KNHK_OP_COMPARE_O_LT)
  {
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->O[ctx->run.off + i] < ir->o) {
        result = 1;
        break;
      }
  }
  
  else if (ir->op == KNHK_OP_COMPARE_O_GE)
  {
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->O[ctx->run.off + i] >= ir->o) {
        result = 1;
        break;
      }
  }
  
  else if (ir->op == KNHK_OP_COMPARE_O_LE)
  {
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->O[ctx->run.off + i] <= ir->o) {
        result = 1;
        break;
      }
  }

  else if (ir->op == KNHK_OP_VALIDATE_DATATYPE_SP)
  {
    // Check if (s, p) has object matching datatype_hash (ir->o contains datatype hash)
    for (uint64_t i = 0; i < ctx->run.len; i++)
      if (ctx->S[ctx->run.off + i] == ir->s && ctx->O[ctx->run.off + i] == ir->o) {
        result = 1;
        break;
      }
  }

  else if (ir->op == KNHK_OP_VALIDATE_DATATYPE_SPO)
  {
    // Check if (s, p, o) exists (datatype validation for SPO)
    result = knhk_eq64_spo_exists_run(ctx->S, ctx->O, ctx->run.off, ctx->run.len, ir->s, ir->o);
  }
#endif

  // Fill receipt with provenance information only (no timing - caller's responsibility)
  if (rcpt) {
    rcpt->lanes = KNHK_NROWS;
    rcpt->span_id = knhk_generate_span_id(); // Generate span ID without timing dependency
    // Simple hash fragment: hash(ir, result, ctx->run)
    rcpt->a_hash = (uint64_t)(ir->s ^ ir->p ^ ir->o ^ ir->k ^ (uint64_t)result ^ ctx->run.pred);
  }

  return result;
}

// Emit up to 8 triples using a fixed template (CONSTRUCT8)
// Returns number of lanes written, fills rcpt with user knowledge only
// Hot path: Pure CONSTRUCT logic only, no timing/framework overhead
static inline int knhk_eval_construct8(const knhk_context_t *ctx, knhk_hook_ir_t *ir, knhk_receipt_t *rcpt)
{
  if (!ctx || !ir || ir->op != KNHK_OP_CONSTRUCT8)
    return 0;
  
  if (!ir->out_S || !ir->out_P || !ir->out_O)
    return 0;
  
  if (ir->p != ctx->run.pred)
    return 0;
  
  // Hot path: Pure CONSTRUCT logic only (branchless SIMD)
#if NROWS == 8
  size_t written = knhk_construct8_emit_8(ctx->S, ctx->run.off, ctx->run.len,
                                            ir->p, ir->o,
                                            ir->out_S, ir->out_P, ir->out_O,
                                            &ir->out_mask);
#else
  // Scalar fallback for non-8 configurations
  // ctx->run.len is guaranteed ≤ 8 at Chicago TDD level
  const uint64_t *s_p = ctx->S + ctx->run.off;
  size_t written = 0;
  uint64_t mask = 0;
  for (uint64_t i = 0; i < ctx->run.len; i++) {
    if (s_p[i] != 0) {
      ir->out_S[written] = s_p[i];
      ir->out_P[written] = ir->p;
      ir->out_O[written] = ir->o;
      mask |= (1ULL << i);
      written++;
    }
  }
  ir->out_mask = mask;
#endif
  
  // Fill receipt with user knowledge only (provenance, not timing)
  if (rcpt) {
    rcpt->lanes = (uint32_t)written;  // User knowledge: how many triples constructed
    rcpt->span_id = knhk_generate_span_id();  // User knowledge: provenance trace ID
    rcpt->a_hash = (uint64_t)(ir->s ^ ir->p ^ ir->o ^ ctx->run.pred ^ ir->out_mask);  // User knowledge: provenance hash
  }
  
  return (int)written;  // User knowledge: number of triples constructed
}

#endif // KNHK_EVAL_H